medio que estaríaa

--- a/informe/informe.tex
+++ b/informe/informe.tex
@@ -311,8 +311,8 @@ sirven el porp\'osito de funcionar como argumentos para las rutinas.
     pues se puede entender de un cargar que se requiere que queden presentes en la agenda todos los contactos que estaban en el archivo, pero podr\'ia suceder que si un usuario est\'a agregando manualmente los contactos este se olvide que ya agreg\'o uno con el mismo nombre.
 
     \subsection{Sobre resizing din\'amico de la agenda}
-    Al crear una tabla de hash se le debe asignar una capacidad, por lo tanto surge la pregunta de qu\'e se debe hacer si se intentan agregar m\'as contactos de los que permite la capacidad. Se decidi\'o que lo mejor 
-    es realizar resizing din\'amico cuando se llega al $70\%$ de la capacidad de la tabla (para poder seguir asegurando un costo constante de b\'usqueda) y se garantiza que empezando con la capacidad dada (31) s\'olo se llegar\'a a una capacidad no prima cuando se llegue a querer una agenda de 1271 contactos a partir de esa nueva capacidad no se garantiza un efectivo doble hashing porque no existir\'a coprimalidad entre el paso de la segunda tabla de hash y la capacidad de la tabla. Si se van a cargar m\'as de 441 contactos se recomienda que se incie con una dimensi\'on prima m\'as grande. (Adem\'as de en general recomendarse establecer una capacidad lo suficientemente grande, puesto que el resizing resulta costoso).
+    Al crear una tabla de hash se le debe asignar una capacidad, por lo tanto, surge la pregunta de qu\'e se debe hacer si se intentan agregar m\'as contactos de los que permite la capacidad. Se decidi\'o que lo mejor 
+    es realizar resizing din\'amico cuando se llega al $70\%$ de la capacidad de la tabla (para poder seguir asegurando un costo constante de b\'usqueda) y se garantiza que, empezando con la capacidad dada (31), solo se llegar\'a a una capacidad no prima cuando se llegue a querer una agenda de 1271 contactos. A partir de esa nueva capacidad no se garantiza un efectivo doble hashing porque no existir\'a coprimalidad entre el paso de la segunda tabla de hash y la capacidad de la tabla. Si se van a cargar m\'as de 441 contactos se recomienda que se incie con una dimensi\'on prima m\'as grande. (Adem\'as de en general recomendarse establecer una capacidad lo suficientemente grande, puesto que el resizing resulta costoso).
 
 \section{Compilaci\'on e invocaci\'on}
 Para la compilaci\'on del programa la entrega cuenta con un archivo Makefile. Para producir el archivo ejecutable basta 
